[metadata]
name = edrn.biomarker.notifier
version = attr: versioneer.get_version
description = Biomarker Notifier
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Sean Kelly
author_email = sean.kelly@jpl.nasa.gov
# download_url = https://github.com/EDRN/edrn.biomarker.notifier/releases
keywords = edrn, cancer, biomarker, discovery, notification
license = ALv2
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
    github=https://github.com/EDRN/edrn.biomarker.notifier


[options]
zip_safe = true
include_package_data = true
install_requires =
    setuptools
    rdflib
packages = find_namespace:
package_dir =
    =src
namespace_packages = edrn, edrn.biomarker


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    biomarker-notifier = edrn.biomarker.notifier.main:main


[versioneer]
VCS = git
style = git-describe
tag_prefix = v
versionfile_source = src/edrn/biomarker/notifier/_version.py
versionfile_build = edrn/biomarker/notifier/_version.py
parentdir_prefix = edrn.biomarker.notifier-
